tests/snapshots/integration__integration_tests__merge__merge_no_commits.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpFeWEub/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
💡 [2mNo commits to squash - already at merge base[0m
✅ [32mMerged to [1m[32mmain[0m[0m
✅ [32mReturned to primary at [1m[32m[REPO][0m[0m
🔄 [36mRemoving worktree & branch...[0m

----- stderr -----
